# ai-quota-bot

./: .gitignore  AGENTS.md  Cargo.toml  README.md
docs/superpowers/plans/: 2026-06-29-ai-quota-bot.md
docs/superpowers/specs/: 2026-06-29-ai-quota-bot-design.md  2026-07-01-match-pi-quota-format-design.md
src/: auth.rs  auth_refresh.rs  config.rs  daemon.rs  detector.rs  lib.rs  main.rs  model.rs  telegram.rs
src/providers/: claude.rs  codex.rs  mod.rs
tests/: auth_refresh_tests.rs  auth_tests.rs  config_tests.rs  daemon_tests.rs  detector_tests.rs  telegram_tests.rs
tests/fixtures/auth/: sample_auth.json
tests/support/: mod.rs
